# SBD1-Fragrances-Dashboard

./: Dockerfile  docker-compose.yml  pg-seeding.sh
backend/GO/echo-pedidos/: Dockerfile  go.mod  go.sum  main.go
backend/GO/echo-pedidos/app/controllers/: ingrediente-controller.go  particular-controller.go  pedido-controller.go  proveedor-controller.go
backend/GO/echo-pedidos/app/models/: ingrediente.go  lote.go  pago.go  particular.go  pedido.go  proveedor.go
backend/GO/echo-pedidos/app/services/: ingrediente-service.go  pago-service.go  particular-service.go  pedido-service.go  proveedor-service.go
backend/GO/echo-pedidos/config/: database.go
backend/GO/echo-pedidos/server/: echo-server.go
backend/GO/echo-pedidos/server/routes/: ingrediente-routes.go  (+3 more)
backend/GO/gin-server/: go.mod
backend/RUST/: Dockerfile
backend/RUST/evaluation-api/: .env  .env-docker  Cargo.toml  Dockerfile  sbd1.dump
backend/RUST/evaluation-api/src/: main.rs  schema.rs
backend/RUST/evaluation-api/src/lib/: db.rs  mod.rs
backend/RUST/evaluation-api/src/lib/auth/: mod.rs  session.rs
backend/RUST/evaluation-api/src/lib/contract/: dsl.rs  mod.rs  model.rs
backend/RUST/evaluation-api/src/lib/perfume_recommender/: dsl.rs  mod.rs  model.rs
backend/RUST/evaluation-api/src/lib/producers/: dsl.rs  mod.rs  model.rs
backend/RUST/evaluation-api/src/lib/providers/: dsl.rs  mod.rs  model.rs
backend/RUST/productor-api/: Cargo.toml
scripts/: KMR01.sql  KMR02.sql  KMR_INSERT02_SCRIPT.sql  KMR_INSERT_SCRIPT.sql  KMR_INSERT_SCRIPT.sql.bak  KMR_QUERY.sql  KMR_SCHEMA_SCRIPT.sql
