[package]
name = "productor-api"
version = "0.1.0"
authors = ["syfers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]
